<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.tomtomkenya.ludouikit.components.LudoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle.Ludo.TitleMedium"
                    android:text="@string/available_balance" />

                <TextView
                    android:id="@+id/textTotalBalance"
                    style="@style/TextStyle.Ludo.DisplaySmall"
                    android:layout_marginTop="@dimen/spacing_2"
                    android:textColor="@color/ludo_primary"
                    android:text="KES 0" />
            </LinearLayout>
        </com.tomtomkenya.ludouikit.components.LudoCard>

        <com.tomtomkenya.ludouikit.components.LudoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_3"
            android:padding="@dimen/spacing_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle.Ludo.TitleMedium"
                    android:text="@string/manage_wallet" />

                <com.tomtomkenya.ludouikit.components.LudoButton
                    android:id="@+id/buttonDeposit"
                    android:layout_marginTop="@dimen/spacing_3"
                    android:text="@string/wallet_deposit" />

                <com.tomtomkenya.ludouikit.components.LudoButton
                    android:id="@+id/buttonWithdraw"
                    android:layout_marginTop="@dimen/spacing_2"
                    android:text="@string/wallet_withdraw"
                    android:backgroundTint="@color/ludo_secondary" />

                <com.tomtomkenya.ludouikit.components.LudoButton
                    android:id="@+id/buttonOffline"
                    android:layout_marginTop="@dimen/spacing_2"
                    android:text="@string/wallet_offline"
                    android:backgroundTint="@color/ludo_tertiary" />
            </LinearLayout>
        </com.tomtomkenya.ludouikit.components.LudoCard>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
