<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacing_4">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.tomtomkenya.ludouikit.components.LudoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spacing_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle.Ludo.TitleLarge"
                    android:text="@string/leaderboard_title" />

                <TextView
                    android:id="@+id/textLeaderboardDescription"
                    style="@style/TextStyle.Ludo.BodyMedium"
                    android:layout_marginTop="@dimen/spacing_1"
                    android:textColor="@color/ludo_on_surface_variant"
                    android:text="@string/leaderboard_subtitle" />
            </LinearLayout>
        </com.tomtomkenya.ludouikit.components.LudoCard>

        <com.tomtomkenya.ludouikit.components.LudoCard
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_3"
            android:padding="@dimen/spacing_4">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/TextStyle.Ludo.TitleMedium"
                    android:text="@string/leaderboard_actions" />

                <com.tomtomkenya.ludouikit.components.LudoButton
                    android:id="@+id/buttonLeaderboard"
                    android:layout_marginTop="@dimen/spacing_3"
                    android:text="@string/leaderboard_view" />
            </LinearLayout>
        </com.tomtomkenya.ludouikit.components.LudoCard>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
