<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Ludo.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:menu="@menu/menu_main_appbar"
            app:contentInsetStartWithNavigation="0dp"
            app:title="@string/app_name"
            app:navigationIcon="@drawable/ic_logo_mark"
            app:layout_scrollFlags="scroll|enterAlways" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host_main"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/navigationView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:navGraph="@navigation/main_nav_graph"
            app:defaultNavHost="true"
            tools:layout="@layout/fragment_home" />

        <com.google.android.material.navigation.NavigationBarView
            android:id="@+id/navigationView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorSurface"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:menu="@menu/menu_bottom_navigation_main"
            app:itemRippleColor="@color/bottom_nav_ripple"
            app:itemIconTint="@color/bottom_nav_color"
            app:itemTextColor="@color/bottom_nav_color" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabQuickPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_play_now"
            android:layout_marginEnd="@dimen/spacing_4"
            android:layout_marginBottom="@dimen/spacing_4"
            app:layout_constraintBottom_toTopOf="@id/navigationView"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_dice"
            app:tint="@color/white"
            app:backgroundTint="@color/ludo_secondary" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
